--- a/twoRoomsLite.css
+++ b/twoRoomsLite.css
@@ -30,7 +30,7 @@
 }
 
 .jumbotron {
-	font-family: 'Gloria Hallelujah', cursive;
+	font-family: 'Gotham medium', serif;
 }
 
 .playersWidget {
@@ -53,7 +53,8 @@
 	margin: 0px;
 	background-color: #8C8C8C;
 	color: #fff;
-	font-family: 'Gloria Hallelujah', cursive;
+	font-family: 'Gotham medium', serif;
+	text-shadow: 1px 1px 30px #333;
 }
 
 .player-item {
@@ -108,7 +109,7 @@
 }
 
 .new-game-button, .join-game-button {
-	margin-top: 10%;
+	margin-top: 25px;
 	height: 50px;
 	font-size: 32px;
 	color:#fff;
@@ -128,7 +129,7 @@
 }
 
 .lobby .start-game-button {
-	background-color: #43B1FA;
+	background-color: steelblue;
 	color: #fff;
 }
 
@@ -175,7 +176,7 @@
 }
 
 .instructions h1, .instructions a {
-	font-family: 'Gloria Hallelujah', cursive;
+	font-family: 'Gotham Medium', serif;
 }
 
 .width-100 {
@@ -198,8 +199,8 @@
 	overflow: hidden;
 }
 
-@media(max-height: 500px) {
-	.footer-text{
-		display: none;
+@media(min-width: 1200px) {
+	.new-game-button, .join-game-button {
+		margin-top: 35px;
 	}
 }
